<resources>
    <string name="app_name">Skynet Confirmed</string>

    <!-- Strings for Intro Slider -->
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Spy your friends</string>
    <string name="slide_1_desc">Your friends!</string>

    <string name="slide_2_title">Spy your ex</string>
    <string name="slide_2_desc">Your ex!</string>

    <string name="slide_3_title">Spy your mom!</string>
    <string name="slide_3_desc">Your mom!</string>

    <string name="slide_4_title">Spy your dog</string>
    <string name="slide_4_desc">Your dog!</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings for Phone Calls Settings Headers -->
    <string name="pref_header_phone_calls">Phone Calls</string>
    <string name="pref_header_call_specify_number">Specify phone number</string>
    <string name="pref_header_call_phone_number">Phone number</string>
    <string name="pref_header_call_spy_type">Spy type</string>
    <string name="pref_header_call_frequency">Frequency</string>

    <!-- Strings for Phone Calls Settings Summaries -->
    <string name="pref_summary_call_specify_number">Spy only on specific phone numbers</string>
    <string name="pref_summary_call_spy_type">Select type of call spying</string>
    <string name="pref_summary_call_frequency">Select spy frequency</string>

    <!-- Example General settings -->
    <string name="pref_header_messages">Messages</string>

    <string name="pref_title_in_address_only">No message body from received messages</string>
    <string name="pref_description_in_address_only">Only receive phone number from received messages, no message body
    </string>
    <string name="pref_title_out_address_only">No message body from sent messages</string>
    <string name="pref_description_out_address_only">Only receive phone number from sent messages, no message body
    </string>
    <string name="pref_title_message_time">Get messages\' date and time</string>
    <string name="pref_description_message_time">Get additional info of incoming and outgoing messages regarding date and time
    </string>

    <string name="pref_title_use_keywords">Use keywords</string>
    <string name="pref_description_use_keywords">Messages that do not have these keywords will not be notified
    </string>
    <string name="pref_title_keywords">Keywords</string>
    <string name="pref_keywords"></string>

    <string name="pref_title_use_message_address">Use phone number</string>
    <string name="pref_description_use_message_address">Messages that do not come from or go to these phone number will not be notified
    </string>
    <string name="pref_title_message_address">Phone Number</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_camera">Camera</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!--Settings for MSHQ's addresses-->
    <string name="pref_header_mshq">MSHQ\'s addresses</string>
    <string name="pref_title_mshq_phone">MSHQ\'s phone numbers</string>
    <string name="pref_description_mshq_phone">Phone numbers that will received notifications about this device\'s activities</string>
    <string name="pref_default_mshq_phone">5555</string>
    <string name="pref_header_mshq_email">MSHQ\'s email addresses</string>
    <string name="pref_title_mshq_email">MSHQ\'s email addresses</string>
    <string name="pref_description_mshq_email">Email addresses that will received notifications about this device\'s activities</string>
    <string name="pref_default_mshq_email">asd@gmail.com</string>
    <string name="pref_default_mshq_email_password">asd</string>

    <string name="pref_title_from_email">MSHQ\'s from email address</string>
    <string name="pref_title_from_email_password">MSHQ\'s from email password</string>
    <string name="pref_title_from_email_default">lvlanh10@gmail.com</string>
    <string name="pref_title_from_email_password_default">meodenhp</string>
</resources>
