<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="false"
        android:key="switch_in_address_only"
        android:summary="@string/pref_description_in_address_only"
        android:title="@string/pref_title_in_address_only" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="switch_out_address_only"
        android:summary="@string/pref_description_out_address_only"
        android:title="@string/pref_title_out_address_only" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="switch_message_time"
        android:summary="@string/pref_description_message_time"
        android:title="@string/pref_title_message_time" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <SwitchPreference
        android:defaultValue="false"
        android:key="switch_use_keywords"
        android:summary="@string/pref_description_use_keywords"
        android:title="@string/pref_title_use_keywords" />
    <EditTextPreference
        android:capitalize="words"
        android:dependency="switch_use_keywords"
        android:defaultValue="@string/pref_keywords"
        android:inputType="textAutoCorrect"
        android:key="keywords_text"
        android:title="@string/pref_title_keywords" />
        <!--android:maxLines="1"-->
        <!--android:selectAllOnFocus="true"-->
        <!--android:singleLine="true"-->
        <!--android:title="@string/pref_title_keywords" />-->
    <SwitchPreference
        android:defaultValue="false"
        android:key="switch_use_message_address"
        android:summary="@string/pref_description_use_message_address"
        android:title="@string/pref_title_use_message_address" />
    <EditTextPreference
        android:dependency="switch_use_message_address"
        android:inputType="phone"
        android:key="message_address_text"
        android:title="@string/pref_title_message_address" />
    <!--android:maxLines="1"-->
    <!--android:selectAllOnFocus="true"-->
    <!--android:singleLine="true"-->
    <!--android:title="@string/pref_title_keywords" />-->

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <!--<ListPreference-->
        <!--android:defaultValue="-1"-->
        <!--android:entries="@array/pref_example_list_titles"-->
        <!--android:entryValues="@array/pref_example_list_values"-->
        <!--android:key="example_list"-->
        <!--android:negativeButtonText="@null"-->
        <!--android:positiveButtonText="@null"-->
        <!--android:title="@string/pref_title_add_friends_to_messages" />-->

</PreferenceScreen>
